<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControladorApp">

    <Button
        android:id="@+id/OKbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ImOkButton"
        android:text="@string/i_m_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <Button
        android:id="@+id/Contactosbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ContactosBtn"
        android:text="@string/contactos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84000003" />

    <Button
        android:id="@+id/Ubicacionbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="UbicacionBtn"
        android:text="@string/ubicacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Contactosbutton" />

    <TextView
        android:id="@+id/NombretextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nombre"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/NumerotextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/numero"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NombretextView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Detenerbutton"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="101dp"
        android:onClick="DetenerBtn"
        android:text="@string/detener"
        app:layout_constraintBottom_toTopOf="@+id/Ubicacionbutton"
        app:layout_constraintEnd_toStartOf="@+id/Iniciarbutton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Iniciarbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="105dp"
        android:onClick="IniciarBtn"
        android:text="@string/iniciar"
        app:layout_constraintBottom_toTopOf="@+id/Ubicacionbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Detenerbutton" />

    <CheckBox
        android:id="@+id/DiesMinutoscheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/cada_10_min"
        app:layout_constraintEnd_toStartOf="@+id/VeinteMinutoscheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ContactoSeleccionadotextView" />

    <CheckBox
        android:id="@+id/VeinteMinutoscheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cada_20_min"
        app:layout_constraintEnd_toStartOf="@+id/TreintaMinutoscheckBox"
        app:layout_constraintStart_toEndOf="@+id/DiesMinutoscheckBox"
        app:layout_constraintTop_toBottomOf="@+id/ContactoSeleccionadotextView" />

    <CheckBox
        android:id="@+id/TreintaMinutoscheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cada_30_min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/VeinteMinutoscheckBox"
        app:layout_constraintTop_toBottomOf="@+id/ContactoSeleccionadotextView" />

    <ListView
        android:id="@+id/ListaContactosListView"
        android:layout_width="314dp"
        android:layout_height="117dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/ContactoSeleccionadotextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OKbutton" />

    <TextView
        android:id="@+id/ContactoSeleccionadotextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:hint="@string/contacto_seleccionado"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <TextView
        android:id="@+id/NotificaciontextView"
        android:layout_width="121dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/notificacion_n"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/NumNotificationtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/_0"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NotificaciontextView" />

    <TextView
        android:id="@+id/TimerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="188dp"
        android:layout_marginBottom="23dp"
        android:text="@string/_00_00"
        app:layout_constraintBottom_toTopOf="@+id/ListaContactosListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OKbutton" />
</androidx.constraintlayout.widget.ConstraintLayout>