<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contactos">

    <EditText
        android:id="@+id/NombreContactoeditText"
        android:layout_width="368dp"
        android:layout_height="45dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/nombre_de_contacto"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NumeroContactoeditText"
        android:autofillHints="" />

    <Button
        android:id="@+id/Agregarbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="305dp"
        android:layout_marginBottom="667dp"
        android:text="@string/agregar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Actualizarbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="217dp"
        android:layout_marginBottom="665dp"
        android:text="@string/actualizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Agregarbutton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Eliminarbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="665dp"
        android:text="@string/eliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Actualizarbutton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ListaPersonastextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="178dp"
        android:layout_marginBottom="617dp"
        android:text="@string/lista_de_contactos"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Actualizarbutton" />

    <EditText
        android:id="@+id/NumeroContactoeditText"
        android:layout_width="368dp"
        android:layout_height="45dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/numero_de_contacto"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ListaPersonastextView"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>